--- a/class 01/index.html
+++ b/class 01/index.html
@@ -29,36 +29,39 @@
 
         </div>
     </section>
-    <section class="mt-20  w-5xl  m-auto ">
+    <section class="mt-20  w-5xl  m-auto max-sm:w-full">
         <div>
-            <div class="mb-15">
-                <h1 class="text-[45px] font-extrabold text-[#1C1C1C3] text-center">Our Featured Products</h1>
-                <p class="text-center">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+            <div class="mb-15 w-4xl m-auto max-sm:w-full">
+                <h1 class="text-[45px] font-extrabold text-[#1C1C1C3] text-center max-sm:w-screen">Our Featured Products</h1>
+                <p class="text-center max-sm:w-full">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
             </div>
-            <div class="flex ">
-                <div>
-                    <img src="../tea-house-resources/images/tea-1.png" alt="">
-                    <h1>Milk Tea</h1>
-                    <p>Creamer could be replaced by fresh milk</p>
+            <div class="flex gap-10 max-sm:flex-col max-sm:w-screen">
+                <div class="shadow-xl ">
+                    <img src="../tea-house-resources/images/tea-1.png" alt="" class="m-auto">
+                    <h1 class="text-center text-[25px] font-extrabold">Milk Tea</h1>
+                    <p class="text-center ">Creamer could be replaced by fresh milk</p>
                 </div>
-                <div>
-                    <img src="../tea-house-resources/images/tea-2.png" alt="">
-                    <h1>Black Tea</h1>
-                    <p>Creamer could be replaced by fresh milk</p>
+                <div class="shadow-xl ">
+                    <img src="../tea-house-resources/images/tea-2.png" alt="" class="m-auto">
+                    <h1 class="text-center text-[25px] font-extrabold">Black Tea</h1>
+                    <p class="text-center ">Creamer could be replaced by fresh milk</p>
                 </div>
-                <div>
-                    <img src="../tea-house-resources/images/tea-3.png" alt="">
-                    <h1>Green Tea</h1>
-                    <p>Creamer could be replaced by fresh milk</p>
+                <div class="shadow-xl ">
+                    <img src="../tea-house-resources/images/tea-3.png" alt="" class="m-auto">
+                    <h1 class="text-center text-[25px] font-extrabold">Green Tea</h1>
+                    <p class="text-center ">Creamer could be replaced by fresh milk</p>
                 </div>
-                <div>
-                    <img src="../tea-house-resources/images/tea-4.png" alt="">
-                    <h1>Lemon Tea</h1>
-                    <p>Creamer could be replaced by fresh milk</p>
+                <div class="shadow-xl">
+                    <img src="../tea-house-resources/images/tea-4.png" alt="" class="m-auto">
+                    <h1 class="text-center text-[25px] font-extrabold">Lemon Tea</h1>
+                    <p class="text-center ">Creamer could be replaced by fresh milk</p>
                 </div>
 
             </div>
         </div>
+    </section>
+    <section>
+        
     </section>
     
 </body>
